--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "puppeteer": "^5.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-spring": "^8.0.27",
     "rollup": "^2.35.1",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^9.2.2",
@@ -75,6 +74,7 @@
     "react": ">=16.8.0"
   },
   "dependencies": {
+    "@react-spring/web": "^9.2.4",
     "memoize-one": "^5.1.1",
     "tiny-invariant": "^1.1.0"
   }
