--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
           COVERALLS_SERVICE_NAME: "github"
           COVERALLS_GIT_COMMIT: ${{ github.sha }}
           COVERALLS_GIT_BRANCH: ${{ github.ref }}
-          COVERALLS_SERVICE_JOB_ID: ${{ github.job }}
+          COVERALLS_SERVICE_JOB_ID: ${{ github.run_id }}
         with:
           timeout_minutes: 1 # Tests run for about 45s
           max_attempts: 3
