--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci && npm ci --prefix examples examples
 
       - name: Install react
         run: npm install --no-save react@${{ matrix.react-version }} react-dom@${{ matrix.react-version }}
