--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install npm@8
+        run: npm install -g npm@8
+
       # help the linter
       - name: Install example dependencies
         working-directory: ./examples
