Fix linting errors (#144)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,11 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    # help the linter
+    - name: Install example dependencies
+      working-directory: ./examples
+      run: npm ci
+
     - name: Lint
       run: npm run lint
 
