--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install npm@8
+        run: npm install -g npm@8
+
+      # help the linter
+      - name: Install example dependencies
+        working-directory: ./examples
+        run: npm ci
+
       - name: Install react
         run: npm install --no-save react@${{ matrix.react-version }} react-dom@${{ matrix.react-version }}
 
