--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@react-spring/web": "^9.4.4",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^21.0.3",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -74,8 +75,8 @@
     "mocha": "^9.2.2",
     "prop-types": "^15.8.1",
     "puppeteer": "^13.5.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^13.0.1",
