--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
           COVERALLS_GIT_COMMIT: ${{ github.sha }}
           COVERALLS_GIT_BRANCH: ${{ github.ref }}
           COVERALLS_SERVICE_JOB_ID: ${{ github.run_id }}
-          CI_PULL_REQUEST: ${{ github.event_name == "pull_request" && github.event.number || null }}
+          CI_PULL_REQUEST: ${{ github.event_name == "pull_request" && github.event.number || "" }}
         with:
           timeout_minutes: 1 # Tests run for about 45s
           max_attempts: 3
