--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-replace": "^4.0.0",
     "babel-plugin-dev-expression": "^0.2.3",
+    "babel-plugin-istanbul": "^6.1.1",
     "chai": "^4.3.6",
     "dynamics.js": "^1.1.5",
     "eslint": "^8.14.0",
@@ -77,7 +78,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "rollup": "^2.70.2",
-    "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "sinon": "^13.0.2",
     "velocity-animate": "^1.5.2"
