--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,9 @@ jobs:
 
     - uses: browser-actions/setup-firefox@latest
 
-    - name: Use Node.js 16
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16
         registry-url: 'https://registry.npmjs.org'
 
     - name: Install dependencies
