--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,8 +52,18 @@ jobs:
           COVERALLS_GIT_COMMIT: ${{ github.sha }}
           COVERALLS_GIT_BRANCH: ${{ github.ref }}
           COVERALLS_SERVICE_JOB_ID: ${{ github.run_id }}
+          COVERALLS_PARALLEL: true
           CI_PULL_REQUEST: ${{ github.event_name == 'pull_request' && github.event.number || null }}
         with:
           timeout_minutes: 1 # Tests run for about 45s
           max_attempts: 3
           command: npm test
+
+  finish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Close parallel build
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel-finished: true
