--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
-  "extends": ["airbnb", "plugin:react/jsx-runtime", "plugin:unicorn/recommended", "plugin:eslint-comments/recommended"],
+  "extends": [
+    "airbnb",
+    "plugin:react/jsx-runtime",
+    "plugin:unicorn/recommended",
+    "plugin:eslint-comments/recommended"
+  ],
   "plugins": ["unicorn", "eslint-comments"],
   "env": {
     "browser": true
@@ -13,14 +18,18 @@
     "max-len": ["error", 150],
     "func-names": 0,
     "new-cap": [2, { "capIsNewExceptions": ["Velocity"] }],
-    "react/function-component-definition": [2, {"namedComponents":"arrow-function"}],
-    "import/no-extraneous-dependencies": ["error", {
-      "devDependencies": [
-        "karma.conf.cjs",
-        "examples/rollup.config.js"
-      ]
-    }],
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function" }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": ["karma.conf.cjs", "examples/rollup.config.js"]
+      }
+    ],
     "unicorn/prevent-abbreviations": 0,
+    "unicorn/no-anonymous-default-export": 0,
     "unicorn/no-null": 0,
     "eslint-comments/no-unused-disable": "error"
   },
