--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@react-spring/web": "^9.7.3",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-babel": "^6.0.4",
@@ -56,7 +57,6 @@
     "dynamics.js": "^1.1.5",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-mocha": "^10.4.3",
